# rmqclient

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  rmq_receiver.cc  rmq_sender.cc
include/: rmq_client.h
src/: CMakeLists.txt  rmq_client.cc  rmq_client.h  rmq_receiver.cc  rmq_sender.cc
